# zed

./: .gitpod.yml  .rules  3D_AR_VR_XR_MR.md  AGENTS.md  AUDIO.md  BUILD.md  CLAUDE.md  COMPLETED.md  COPILOT_SETUP.md  Cargo.toml  DX.md  DX_MASTERPLAN.md  DX_PLAN.md  DX_TODO.md  FILES.md  GEMINI.md  GPUI_GUIDE.md  HOMEPAGE_3D_AR_VR.md  HOMEPAGE_AUDIO.md  HOMEPAGE_DRAFT.md  HOMEPAGE_IMAGE.md  HOMEPAGE_LIVE.md  HOMEPAGE_PDF_DOCS_REPORTS_CHARTS.md  HOMEPAGE_TEXT.md  HOMEPAGE_VIDEO.md  ICONS.md  IMAGE.md  LITELLM.md  LIVE.md  MERGE_CONFLICTS_SUMMARY.md  MODE.md  MODELS_DEV_IMPLEMENTATION_GUIDE.md  MODELS_DEV_INTEGRATION.md  N8N.md  OPENCODE_FREE_MODELS_GUIDE.md  OPENCODE_INTEGRATION_SUMMARY.md  PDF_DOCS_CHARTS.md  SYSTEM_QUICK_REFERENCE.md  VIDEO.md  WORKTREE.md  (+2 more)
crates/dx_computer_use/: Cargo.toml
crates/dx_computer_use/src/: accessibility.rs  actions.rs  dx_computer_use.rs  safety.rs  screenshot.rs  vision.rs
crates/dx_core/: Cargo.toml
crates/dx_core/src/: config.rs  cost.rs  device_tier.rs  dx_core.rs  llm_provider.rs  media_provider.rs  mood.rs  profile.rs  provider_registry.rs  rate_limiter.rs  session.rs  tts_provider.rs
crates/dx_daemon/: Cargo.toml
crates/dx_daemon/src/: channel.rs  cron.rs  dx_daemon.rs  memory.rs  service.rs  vps.rs
crates/dx_grammar/: Cargo.toml
crates/dx_grammar/src/: detection.rs  diagnostic.rs  dx_grammar.rs  harper_tier.rs  llm_tier.rs  nlprule_tier.rs  pipeline.rs  writing_profile.rs
crates/dx_hardware/: Cargo.toml
crates/dx_hardware/src/: dx_hardware.rs  gpu.rs  model_selector.rs  monitor.rs  profiler.rs
crates/dx_media/: Cargo.toml
crates/dx_media/src/: document_generator.rs  dx_media.rs  fal_ai.rs  openai_image.rs  orchestrator.rs  stability_ai.rs
crates/dx_voice/: Cargo.toml
crates/dx_voice/src/: conversation.rs  dx_voice.rs  flow_bar.rs  piper_tts.rs  stt_engine.rs  tts_manager.rs
crates/social_sharing/: Cargo.toml
crates/social_sharing/src/: platforms.rs  share_service.rs  social_sharing.rs
integrations/tool-tui/: .clippy.toml  .env.example  .gitignore  Cargo.toml  DESKTOP.md  FREE.md  FREE_LLM_STRATEGY.md  GRADIENT_ANIMATION_IMPROVEMENT.md  KEYLESS_LLM_TEST_RESULTS.md  KIRO_ZED.md  MCP.md  MCP_SCREENSHOT_IMPROVEMENT.md  MEDIA_RENDERING.md  OPENCODE.md  README.md  TRULY_KEYLESS_LLM_PROVIDERS.md  TUI.md  ZED_AI_ANALYSIS.md  ZED_README.md  ZED_THEME_COLLAB_DIFF.md  airforce_working_models.json  dx  pollinations_models.json  response.json  rustfmt.toml
integrations/tool-tui/.dx/cache/: cache.json
integrations/tool-tui/.github/: copilot-instructions.md
integrations/tool-tui/.kiro/settings/: mcp.json
integrations/tool-tui/.kiro/steering/: cli-design-system.md  dx-serializer.md  gpui-desktop.md  product.md  structure.md  tech.md  workflow.md
integrations/tool-tui/apps/: README.md
integrations/tool-tui/apps/desktop/: Cargo.toml  README.md  build.rs  rebuild.sh  theme.css
integrations/tool-tui/apps/webview/: Cargo.toml  README.md
integrations/tool-tui/apps/www/: ICON_INTEGRATION_SUMMARY.md  README.md  SVGL_FIXES.md  next.config.ts  package-lock.json  package.json
integrations/tool-tui/crates/check/: .gitmodules  CHANGELOG.md  Cargo.toml  README.md
integrations/tool-tui/crates/cli/: CHANGELOG.md  CHAT_UI_MISSING_FEATURES.md  CHAT_UI_REQUIREMENTS.md  CONTRIBUTING.md  Cargo.toml  FORMATS_DEMO.md  OPENCLAW_INTEGRATION.md  README.md  README_CHAT.md  README_LLM.md  SELF_UPDATE.md  build.rs  commands.sr  editor.sr  llm.example.toml  theme.sr
integrations/tool-tui/crates/cli-onboard/: Cargo.toml  README.md
integrations/tool-tui/crates/dcp/: Cargo.toml  DCP.md  README.md
integrations/tool-tui/crates/driven/: CHANGELOG.md  Cargo.toml  README.md
integrations/tool-tui/crates/experimental/: README.md
integrations/tool-tui/crates/forge/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  R2_TROUBLESHOOTING.md  README.md  orchestration.toml
integrations/tool-tui/crates/i18n/: CHANGELOG.md  Cargo.toml  README.md  build.rs  run_silent.bat
integrations/tool-tui/crates/markdown/: BEAUTIFIER.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  debug_breakthroughs.llm  test_rkyv.rs
integrations/tool-tui/crates/media/: .env.example  CHANGELOG.md  Cargo.toml  LICENSE  README.md  STATUS.md
integrations/tool-tui/crates/serializer/: CHANGELOG.md  Cargo.toml  LLM_FORMAT_SPEC.md  MACHINE_FORMAT.md  README.md
integrations/tool-tui/crates/style/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PLAYGROUND.md  README.md  brutal_truth_results.txt  build.rs  index.html  style.css  test_index.html
integrations/tool-tui/crates/workspace/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
integrations/tool-tui/docs/: README.md  agent-tools-success.md
integrations/tool-tui/docs/agent/: gateway-api-guide.md  openclaw-vs-dx-normalize-benchmark.json  openclaw-vs-dx-normalize-benchmark.md  openclaw_whatsapp_normalize_reference.mjs  security-best-practices.md  troubleshooting-guide.md  user-guide.md  whatsapp-benchmark-results.json  whatsapp-benchmark.md  whatsapp-evaluation.md
integrations/tool-tui/docs/cli/: DX_OPENCLAW_ONBOARDING_SETUP.md  ONBOARDING_PROMPT_DESIGN_SYSTEM.md
integrations/tool-tui/docs/desktop/: icon-rendering-fix.md
integrations/tool-tui/docs/gpui/: GPUI_SUMMARY.md  README.md
integrations/tool-tui/driven/AGI/: design.md  integrations.md  omnibus.md  platforms.md  requirements.md  tasks.md
integrations/tool-tui/driven/CLI/: design.md  requirements.md
integrations/tool-tui/driven/WWW/: design.md  requirements.md  tasks.md
integrations/tool-tui/driven/WWW_PRODUCTION_READY/: design.md  requirements.md  tasks.md
integrations/tool-tui/extensions/: README.md
integrations/tool-tui/extensions/browser/: .gitignore  package.json
integrations/tool-tui/integrations/: README.md
integrations/tool-tui/mcp/: README.md  last-window-capture.ps1  package.json  tsconfig.json
integrations/www-forge-token/dx/: Cargo.toml
integrations/www-forge-token/forge/: Cargo.toml  README.md
(+7139 files in other folders)
