[package]
name = "dx_computer_use"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
description = "OS automation: mouse, keyboard, screenshot, accessibility tree, safety."

[lints]
workspace = true

[lib]
path = "src/dx_computer_use.rs"
doctest = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
dx_core = { path = "../dx_core" }
log.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
util = { path = "../util" }
