[package]
name = "dx_core"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
description = "Core DX types, traits, and provider abstractions for the Universal AI Platform"

[lints]
workspace = true

[lib]
path = "src/dx_core.rs"
doctest = false

[features]
test-support = []

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
collections.workspace = true
futures.workspace = true
gpui.workspace = true
http_client.workspace = true
log.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
smol.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
util.workspace = true
