[package]
name = "dx_daemon"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
description = "Background daemon: cron, channel routing, memory engine, VPS deploy."

[lints]
workspace = true

[lib]
path = "src/dx_daemon.rs"
doctest = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
dx_core = { path = "../dx_core" }
futures.workspace = true
log.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
util = { path = "../util" }
