[package]
name = "dx_grammar"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
description = "Three-tier grammar pipeline: Harper → nlprule → LLM."

[lints]
workspace = true

[lib]
path = "src/dx_grammar.rs"
doctest = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
dx_core = { path = "../dx_core" }
futures.workspace = true
log.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
util = { path = "../util" }
