[package]
name = "dx_hardware"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
description = "Hardware profiling, device tier detection, resource monitoring."

[lints]
workspace = true

[lib]
path = "src/dx_hardware.rs"
doctest = false

[dependencies]
anyhow.workspace = true
dx_core = { path = "../dx_core" }
log.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
util = { path = "../util" }
