[package]
name = "dx_voice"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
description = "Voice engine for DX — local STT (Whisper), local TTS (Piper/Chatterbox), cloud TTS"

[lints]
workspace = true

[lib]
path = "src/dx_voice.rs"
doctest = false

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
dx_core = { path = "../dx_core" }
futures.workspace = true
gpui.workspace = true
log.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
util.workspace = true
