[package]
name = "social_sharing"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
description = "Social sharing: share AI outputs to social platforms and channels."

[lints]
workspace = true

[lib]
path = "src/social_sharing.rs"
doctest = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
log.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
util = { path = "../util" }
