[workspace]
resolver = "2"
members = [
    "crates/dx-core",
    "crates/serializer",
    # ── TEXT / IMAGE TOKEN SAVERS ──
    "crates/prefix-cache",
    "crates/compaction",
    "crates/governor",
    "crates/reasoning-router",
    "crates/vision-compress",
    "crates/ocr-extract",
    "crates/semantic-cache",
    "crates/schema-minifier",
    "crates/output-truncator",
    "crates/dedup",
    "crates/retrieval-budget",
    "crates/patch-prefer",
    "crates/context-pruner",
    "crates/rlm",
    "crates/batch-router",
    "crates/tool-router",
    "crates/prompt-compress",
    "crates/cot-compress",
    "crates/vision-select",
    "crates/response-cache",
    "crates/token-budget",
    "crates/history-summarizer",
    "crates/embedding-compress",
    "crates/parallel-tool-merge",
    "crates/whitespace-normalize",
    # ── MULTIMODAL TOKEN SAVERS ──
    "crates/audio-compress",
    "crates/audio-transcribe",
    "crates/audio-segment",
    "crates/live-frame-dedup",
    "crates/live-token-prune",
    "crates/live-kv-compress",
    "crates/live-event-tree",
    "crates/pdf-text-extract",
    "crates/pdf-page-compress",
    "crates/pdf-chart-detect",
    "crates/doc-layout-compress",
    "crates/video-temporal-merge",
    "crates/video-keyframe-select",
    "crates/video-scene-segment",
    "crates/asset3d-multiview-compress",
    "crates/asset3d-pointcloud-compress",
    "crates/asset3d-mesh-summarize",
    "crates/multimodal-router",
    "crates/cross-modal-dedup",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/najmus-sakib-hossain/dx"

[workspace.dependencies]
# Core async
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing
blake3 = "1"

# Image processing
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp"] }
fast_image_resize = "4"

# Caching
moka = { version = "0.12", features = ["sync"] }

# Regex
regex-lite = "0.1"

# Text diff
similar = "2"

# Persistent storage
redb = "2"

# Compression
zstd = "0.13"

# Error handling
anyhow = "1"
thiserror = "2"

# Internal crates
dx-core = { path = "crates/dx-core" }
vision-compress = { path = "crates/vision-compress" }
semantic-cache = { path = "crates/semantic-cache" }
audio-compress = { path = "crates/audio-compress" }
