[package]
name = "dx"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]
resolver = "2"

[dependencies]
wry = { version = "0.53.3", package = "lb-wry" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
smallvec = "1.11"

[target.'cfg(target_os = "windows")'.dependencies]
gpui = { version = "0.2.2", default-features = false, features = ["windows-manifest"] }
raw-window-handle = "0.6.2"
windows = { version = "0.58", features = ["Wdk_System_SystemServices", "Win32_System_SystemInformation"] }

[target.'cfg(target_os = "macos")'.dependencies]
gpui = { version = "0.2.2", default-features = false }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
gpui = { version = "0.2.2", default-features = false, features = ["wayland", "x11"] }
gtk = "0.18"
