[package]
name = "dx-onboard"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dx-onboard"
path = "src/main.rs"

[dependencies]
# Terminal UI
console = "0.15"
owo-colors = { version = "4.0", features = ["supports-colors"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
ratatui = "0.29"
crossterm = "0.28"

# Utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.20"
strsim = "0.11.1"
textwrap = "0.16"
regex = "1.10"
fuzzy-matcher = "0.3"
zeroize = "1.8"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "time"] }
dotenvy = "0.15"
libsql = "0.9"
argon2 = "0.5"
rand = "0.8"
oauth2 = "4.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.3"
async-trait = "0.1"
thiserror = "2.0"
toml = "0.8"
genai = "0.5.3"
ollama-rs = "0.3.4"
copilot-client = "0.1.0"
copilot-sdk-supercharged = "1.0.15"
dirs = "5.0"
webbrowser = "1.0"
url = "2.5"
image = { version = "0.25", features = ["jpeg", "png", "webp", "gif"] }
artem = "3.0"
keyring = "3.6"

[dev-dependencies]
httpmock = "0.7"
