[package]
name = "dcp"
version = "0.1.0"
edition = "2021"
description = "Development Context Protocol - binary-first replacement for MCP"
license = "MIT"

[workspace]

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
crc32fast = "1.3"
thiserror = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
bytes = "1.5"
tokio-rustls = "0.25"
rustls-pemfile = "2.0"
base64 = "0.21"

[[bin]]
name = "dcp"
path = "src/bin/dcp.rs"

[dev-dependencies]
proptest = "1.4"
regex = "1.10"
